--- a/index.html
+++ b/index.html
@@ -240,9 +240,142 @@
             </div>
         </div>
     </section>
+    <section class="features-products">
+        <div class="container">
+            <div class="section-header">
+                <h1>Featured Products</h1>
+                <div class="slider-arrow">
+                    <button type="button" class="icons-button">
+                        <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1.5L1 6M1 6L5.5 10.5M1 6H17" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                            
+                    </button>
+                    <button type="button" class="icons-button">
+                        <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12.5 1.5L17 6M17 6L12.5 10.5M17 6H1" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                                                        
+                    </button>
+                </div>
+            </div>
+            <div class="products">
+                <div class="row">
+                    <div class="col-3">
+                        <div class="product-item">
+                            <div class="image">
+                                <img src="./src/img/products.png " alt="">
+                                <div class="label">New</div>
+                                <a href="" class="icons-button">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.63268 10.6315C1.64909 7.56068 2.79768 4.05077 6.02251 3.01218C6.85874 2.74461 7.74682 2.68088 8.61268 2.8263C9.47855 2.97173 10.2971 3.3221 11 3.84818C12.3338 2.81693 14.2743 2.4686 15.9683 3.01218C19.1923 4.05077 20.3491 7.56068 19.3664 10.6315C17.8356 15.499 11 19.2482 11 19.2482C11 19.2482 4.21484 15.5558 2.63268 10.6315V10.6315Z" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                            <div class="content">
+                                <div class="info">
+                                    <a href="#">Library Stool Chair</a>
+                                    <p class="price">$20</p>
+                                </div>
+                                <a href="#" class="action icons-button cart ">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.52084 2.97919L4.42751 3.30919L5.31026 13.8261C5.34417 14.24 5.53287 14.6258 5.8387 14.9067C6.14454 15.1875 6.54503 15.3427 6.96026 15.3414H16.9611C17.3587 15.3418 17.7431 15.1987 18.0435 14.9383C18.344 14.6779 18.5403 14.3178 18.5964 13.9242L19.4673 7.91269C19.4905 7.75281 19.4819 7.58993 19.4422 7.43335C19.4024 7.27677 19.3321 7.12957 19.2354 7.00017C19.1387 6.87076 19.0174 6.76169 18.8785 6.67919C18.7396 6.59669 18.5858 6.54237 18.4259 6.51935C18.3673 6.51294 4.73368 6.50835 4.73368 6.50835" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12.9479 9.89545H15.4899" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6.55786 18.5194C6.62508 18.5166 6.69219 18.5273 6.75515 18.551C6.81811 18.5748 6.87562 18.611 6.9242 18.6576C6.97279 18.7041 7.01145 18.76 7.03787 18.8219C7.06428 18.8838 7.0779 18.9504 7.0779 19.0177C7.0779 19.0849 7.06428 19.1515 7.03787 19.2134C7.01145 19.2753 6.97279 19.3312 6.9242 19.3777C6.87562 19.4243 6.81811 19.4605 6.75515 19.4843C6.69219 19.508 6.62508 19.5187 6.55786 19.5159C6.42942 19.5104 6.30808 19.4555 6.21914 19.3626C6.13021 19.2698 6.08057 19.1462 6.08057 19.0177C6.08057 18.8891 6.13021 18.7655 6.21914 18.6727C6.30808 18.5799 6.42942 18.525 6.55786 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M16.8988 18.5194C17.0312 18.5194 17.1583 18.572 17.252 18.6657C17.3457 18.7594 17.3983 18.8865 17.3983 19.019C17.3983 19.1515 17.3457 19.2786 17.252 19.3723C17.1583 19.4659 17.0312 19.5186 16.8988 19.5186C16.7663 19.5186 16.6392 19.4659 16.5455 19.3723C16.4518 19.2786 16.3992 19.1515 16.3992 19.019C16.3992 18.8865 16.4518 18.7594 16.5455 18.6657C16.6392 18.572 16.7663 18.5194 16.8988 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="product-item">
+                            <div class="image">
+                                <img src="./src/img/products1.png " alt="">
+                                <div class="label">New</div>
+                                <a href="" class="icons-button">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.63268 10.6315C1.64909 7.56068 2.79768 4.05077 6.02251 3.01218C6.85874 2.74461 7.74682 2.68088 8.61268 2.8263C9.47855 2.97173 10.2971 3.3221 11 3.84818C12.3338 2.81693 14.2743 2.4686 15.9683 3.01218C19.1923 4.05077 20.3491 7.56068 19.3664 10.6315C17.8356 15.499 11 19.2482 11 19.2482C11 19.2482 4.21484 15.5558 2.63268 10.6315V10.6315Z" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                            <div class="content">
+                                <div class="info">
+                                    <a href="#">Library Stool Chair</a>
+                                    <p class="price">$20</p>
+                                </div>
+                                <a href="#" class="action icons-button cart ">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.52084 2.97919L4.42751 3.30919L5.31026 13.8261C5.34417 14.24 5.53287 14.6258 5.8387 14.9067C6.14454 15.1875 6.54503 15.3427 6.96026 15.3414H16.9611C17.3587 15.3418 17.7431 15.1987 18.0435 14.9383C18.344 14.6779 18.5403 14.3178 18.5964 13.9242L19.4673 7.91269C19.4905 7.75281 19.4819 7.58993 19.4422 7.43335C19.4024 7.27677 19.3321 7.12957 19.2354 7.00017C19.1387 6.87076 19.0174 6.76169 18.8785 6.67919C18.7396 6.59669 18.5858 6.54237 18.4259 6.51935C18.3673 6.51294 4.73368 6.50835 4.73368 6.50835" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12.9479 9.89545H15.4899" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6.55786 18.5194C6.62508 18.5166 6.69219 18.5273 6.75515 18.551C6.81811 18.5748 6.87562 18.611 6.9242 18.6576C6.97279 18.7041 7.01145 18.76 7.03787 18.8219C7.06428 18.8838 7.0779 18.9504 7.0779 19.0177C7.0779 19.0849 7.06428 19.1515 7.03787 19.2134C7.01145 19.2753 6.97279 19.3312 6.9242 19.3777C6.87562 19.4243 6.81811 19.4605 6.75515 19.4843C6.69219 19.508 6.62508 19.5187 6.55786 19.5159C6.42942 19.5104 6.30808 19.4555 6.21914 19.3626C6.13021 19.2698 6.08057 19.1462 6.08057 19.0177C6.08057 18.8891 6.13021 18.7655 6.21914 18.6727C6.30808 18.5799 6.42942 18.525 6.55786 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M16.8988 18.5194C17.0312 18.5194 17.1583 18.572 17.252 18.6657C17.3457 18.7594 17.3983 18.8865 17.3983 19.019C17.3983 19.1515 17.3457 19.2786 17.252 19.3723C17.1583 19.4659 17.0312 19.5186 16.8988 19.5186C16.7663 19.5186 16.6392 19.4659 16.5455 19.3723C16.4518 19.2786 16.3992 19.1515 16.3992 19.019C16.3992 18.8865 16.4518 18.7594 16.5455 18.6657C16.6392 18.572 16.7663 18.5194 16.8988 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="product-item">
+                            <div class="image">
+                                <img src="./src/img/products2.png " alt="">
+                                <div class="label">New</div>
+                                <a href="" class="icons-button">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.63268 10.6315C1.64909 7.56068 2.79768 4.05077 6.02251 3.01218C6.85874 2.74461 7.74682 2.68088 8.61268 2.8263C9.47855 2.97173 10.2971 3.3221 11 3.84818C12.3338 2.81693 14.2743 2.4686 15.9683 3.01218C19.1923 4.05077 20.3491 7.56068 19.3664 10.6315C17.8356 15.499 11 19.2482 11 19.2482C11 19.2482 4.21484 15.5558 2.63268 10.6315V10.6315Z" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                            <div class="content">
+                                <div class="info">
+                                    <a href="#">Library Stool Chair</a>
+                                    <p class="price">$20</p>
+                                </div>
+                                <a href="#" class="action icons-button cart ">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.52084 2.97919L4.42751 3.30919L5.31026 13.8261C5.34417 14.24 5.53287 14.6258 5.8387 14.9067C6.14454 15.1875 6.54503 15.3427 6.96026 15.3414H16.9611C17.3587 15.3418 17.7431 15.1987 18.0435 14.9383C18.344 14.6779 18.5403 14.3178 18.5964 13.9242L19.4673 7.91269C19.4905 7.75281 19.4819 7.58993 19.4422 7.43335C19.4024 7.27677 19.3321 7.12957 19.2354 7.00017C19.1387 6.87076 19.0174 6.76169 18.8785 6.67919C18.7396 6.59669 18.5858 6.54237 18.4259 6.51935C18.3673 6.51294 4.73368 6.50835 4.73368 6.50835" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12.9479 9.89545H15.4899" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6.55786 18.5194C6.62508 18.5166 6.69219 18.5273 6.75515 18.551C6.81811 18.5748 6.87562 18.611 6.9242 18.6576C6.97279 18.7041 7.01145 18.76 7.03787 18.8219C7.06428 18.8838 7.0779 18.9504 7.0779 19.0177C7.0779 19.0849 7.06428 19.1515 7.03787 19.2134C7.01145 19.2753 6.97279 19.3312 6.9242 19.3777C6.87562 19.4243 6.81811 19.4605 6.75515 19.4843C6.69219 19.508 6.62508 19.5187 6.55786 19.5159C6.42942 19.5104 6.30808 19.4555 6.21914 19.3626C6.13021 19.2698 6.08057 19.1462 6.08057 19.0177C6.08057 18.8891 6.13021 18.7655 6.21914 18.6727C6.30808 18.5799 6.42942 18.525 6.55786 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M16.8988 18.5194C17.0312 18.5194 17.1583 18.572 17.252 18.6657C17.3457 18.7594 17.3983 18.8865 17.3983 19.019C17.3983 19.1515 17.3457 19.2786 17.252 19.3723C17.1583 19.4659 17.0312 19.5186 16.8988 19.5186C16.7663 19.5186 16.6392 19.4659 16.5455 19.3723C16.4518 19.2786 16.3992 19.1515 16.3992 19.019C16.3992 18.8865 16.4518 18.7594 16.5455 18.6657C16.6392 18.572 16.7663 18.5194 16.8988 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="product-item">
+                            <div class="image">
+                                <img src="./src/img/products3.png " alt="">
+                                <div class="label">New</div>
+                                <a href="" class="icons-button">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M2.63268 10.6315C1.64909 7.56068 2.79768 4.05077 6.02251 3.01218C6.85874 2.74461 7.74682 2.68088 8.61268 2.8263C9.47855 2.97173 10.2971 3.3221 11 3.84818C12.3338 2.81693 14.2743 2.4686 15.9683 3.01218C19.1923 4.05077 20.3491 7.56068 19.3664 10.6315C17.8356 15.499 11 19.2482 11 19.2482C11 19.2482 4.21484 15.5558 2.63268 10.6315V10.6315Z" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                            <div class="content">
+                                <div class="info">
+                                    <a href="#">Library Stool Chair</a>
+                                    <p class="price">$20</p>
+                                </div>
+                                <a href="#" class="action icons-button cart ">
+                                    <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M2.52084 2.97919L4.42751 3.30919L5.31026 13.8261C5.34417 14.24 5.53287 14.6258 5.8387 14.9067C6.14454 15.1875 6.54503 15.3427 6.96026 15.3414H16.9611C17.3587 15.3418 17.7431 15.1987 18.0435 14.9383C18.344 14.6779 18.5403 14.3178 18.5964 13.9242L19.4673 7.91269C19.4905 7.75281 19.4819 7.58993 19.4422 7.43335C19.4024 7.27677 19.3321 7.12957 19.2354 7.00017C19.1387 6.87076 19.0174 6.76169 18.8785 6.67919C18.7396 6.59669 18.5858 6.54237 18.4259 6.51935C18.3673 6.51294 4.73368 6.50835 4.73368 6.50835" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path d="M12.9479 9.89545H15.4899" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M6.55786 18.5194C6.62508 18.5166 6.69219 18.5273 6.75515 18.551C6.81811 18.5748 6.87562 18.611 6.9242 18.6576C6.97279 18.7041 7.01145 18.76 7.03787 18.8219C7.06428 18.8838 7.0779 18.9504 7.0779 19.0177C7.0779 19.0849 7.06428 19.1515 7.03787 19.2134C7.01145 19.2753 6.97279 19.3312 6.9242 19.3777C6.87562 19.4243 6.81811 19.4605 6.75515 19.4843C6.69219 19.508 6.62508 19.5187 6.55786 19.5159C6.42942 19.5104 6.30808 19.4555 6.21914 19.3626C6.13021 19.2698 6.08057 19.1462 6.08057 19.0177C6.08057 18.8891 6.13021 18.7655 6.21914 18.6727C6.30808 18.5799 6.42942 18.525 6.55786 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M16.8988 18.5194C17.0312 18.5194 17.1583 18.572 17.252 18.6657C17.3457 18.7594 17.3983 18.8865 17.3983 19.019C17.3983 19.1515 17.3457 19.2786 17.252 19.3723C17.1583 19.4659 17.0312 19.5186 16.8988 19.5186C16.7663 19.5186 16.6392 19.4659 16.5455 19.3723C16.4518 19.2786 16.3992 19.1515 16.3992 19.019C16.3992 18.8865 16.4518 18.7594 16.5455 18.6657C16.6392 18.572 16.7663 18.5194 16.8988 18.5194Z" fill="#272343" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <script type="module " src="/main.js "></script>
 </body>
+
+</html>
 
 </html>
