category section complate

--- a/index.html
+++ b/index.html
@@ -371,7 +371,62 @@
             </div>
         </div>
     </section>
-
+    <div class="top-categories">
+        <div class="container">
+            <div class="section-header">
+                <h1>Featured Products</h1>
+                <div class="slider-arrow">
+                    <button type="button" class="icons-button">
+                        <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1.5L1 6M1 6L5.5 10.5M1 6H17" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                            
+                    </button>
+                    <button type="button" class="icons-button">
+                        <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12.5 1.5L17 6M17 6L12.5 10.5M17 6H1" stroke="#272343" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                                                        
+                    </button>
+                </div>
+            </div>
+            <div class="categjory-slider">
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                        <a class="category-item">
+                            <div class="image">
+                                <img src="./src/img/product.png" alt="">
+                            </div>
+                            <div class="contents">
+                                <h3>Wing Chair</h3>
+                                <small>120 Products</small>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                        <a class="category-item">
+                            <div class="image">
+                                <img src="./src/img/product1.png" alt="">
+                            </div>
+                            <div class="contents">
+                                <h3>Wooden Chair</h3>
+                                <small>157 Products</small>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                        <a class="category-item">
+                            <div class="image">
+                                <img src="./src/img/product2.png" alt="">
+                            </div>
+                            <div class="contents">
+                                <h3>Desk Chair</h3>
+                                <small>180 Products</small>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script type="module " src="/main.js "></script>
 </body>
